xpath/compilerv1/XPathParser.py
# Generated from .\xpath\xpathgrammer\XPath.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class XPathParser ( Parser ):

    grammarFileName = "XPath.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'doc'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "'!'", "']'", "'}'", 
                     "':='", "':'", "'::'", "','", "')'", "':*'", "'.'", 
                     "'..'", "'$'", "'=>'", "'='", "'>='", "'>>'", "'>'", 
                     "'<='", "'<<'", "'<'", "'-'", "'!='", "'['", "'{'", 
                     "'('", "'|'", "'+'", "'#'", "'||'", "'?'", "'*:'", 
                     "'/'", "'//'", "'*'", "'ancestor'", "'ancestor-or-self'", 
                     "'and'", "'attribute'", "'child'", "'comment'", "'descendant'", 
                     "'descendant-or-self'", "'following'", "'following-sibling'", 
                     "'node'", "'not'", "'or'", "'parent'", "'preceding'", 
                     "'preceding-sibling'", "'processing-instruction'", 
                     "'self'", "'text'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "AXES", "NODE_NAME", "DOCUMENT_NAME", 
                      "PREDICATE_OPERATOR", "PREDICATE_CONNECTIVES", "AT", 
                      "BANG", "CB", "CC", "CEQ", "COLON", "COLONCOLON", 
                      "COMMA", "CP", "CS", "D", "DD", "DOLLAR", "EG", "EQ", 
                      "GE", "GG", "GT", "LE", "LL", "LT", "MINUS", "NE", 
                      "OB", "OC", "OP", "P", "PLUS", "POUND", "PP", "QM", 
                      "SC", "SLASH", "SS", "STAR", "KW_ANCESTOR", "KW_ANCESTOR_OR_SELF", 
                      "KW_AND", "KW_ATTRIBUTE", "KW_CHILD", "KW_COMMENT", 
                      "KW_DESCENDANT", "KW_DESCENDANT_OR_SELF", "KW_FOLLOWING", 
                      "KW_FOLLOWING_SIBLING", "KW_NODE", "KW_NOT", "KW_OR", 
                      "KW_PARENT", "KW_PRECEDING", "KW_PRECEDING_SIBLING", 
                      "KW_PROCESSING_INSTRUCTION", "KW_SELF", "KW_TEXT", 
                      "IntegerLiteral", "StringLiteral", "WS" ]

    RULE_xpath = 0
    RULE_expr = 1
    RULE_document = 2
    RULE_locationstepexpr = 3
    RULE_absolutepath = 4
    RULE_relativepath = 5
    RULE_path = 6
    RULE_unqualifiedpath = 7
    RULE_qualifiedpath = 8
    RULE_nodetest = 9
    RULE_allselector = 10
    RULE_allnodeselector = 11
    RULE_alltextselector = 12
    RULE_allcommentselector = 13
    RULE_allprocessinginstructionselector = 14
    RULE_nodeselector = 15
    RULE_pred = 16
    RULE_predexpr = 17
    RULE_predexprsingle = 18
    RULE_predpath = 19
    RULE_literal = 20

    ruleNames =  [ "xpath", "expr", "document", "locationstepexpr", "absolutepath", 
                   "relativepath", "path", "unqualifiedpath", "qualifiedpath", 
                   "nodetest", "allselector", "allnodeselector", "alltextselector", 
                   "allcommentselector", "allprocessinginstructionselector", 
                   "nodeselector", "pred", "predexpr", "predexprsingle", 
                   "predpath", "literal" ]

    EOF = Token.EOF
    T__0=1
    AXES=2
    NODE_NAME=3
    DOCUMENT_NAME=4
    PREDICATE_OPERATOR=5
    PREDICATE_CONNECTIVES=6
    AT=7
    BANG=8
    CB=9
    CC=10
    CEQ=11
    COLON=12
    COLONCOLON=13
    COMMA=14
    CP=15
    CS=16
    D=17
    DD=18
    DOLLAR=19
    EG=20
    EQ=21
    GE=22
    GG=23
    GT=24
    LE=25
    LL=26
    LT=27
    MINUS=28
    NE=29
    OB=30
    OC=31
    OP=32
    P=33
    PLUS=34
    POUND=35
    PP=36
    QM=37
    SC=38
    SLASH=39
    SS=40
    STAR=41
    KW_ANCESTOR=42
    KW_ANCESTOR_OR_SELF=43
    KW_AND=44
    KW_ATTRIBUTE=45
    KW_CHILD=46
    KW_COMMENT=47
    KW_DESCENDANT=48
    KW_DESCENDANT_OR_SELF=49
    KW_FOLLOWING=50
    KW_FOLLOWING_SIBLING=51
    KW_NODE=52
    KW_NOT=53
    KW_OR=54
    KW_PARENT=55
    KW_PRECEDING=56
    KW_PRECEDING_SIBLING=57
    KW_PROCESSING_INSTRUCTION=58
    KW_SELF=59
    KW_TEXT=60
    IntegerLiteral=61
    StringLiteral=62
    WS=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class XpathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(XPathParser.ExprContext,0)


        def EOF(self):
            return self.getToken(XPathParser.EOF, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_xpath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXpath" ):
                listener.enterXpath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXpath" ):
                listener.exitXpath(self)




    def xpath(self):

        localctx = XPathParser.XpathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_xpath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.expr()
            self.state = 43
            self.match(XPathParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def document(self):
            return self.getTypedRuleContext(XPathParser.DocumentContext,0)


        def locationstepexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XPathParser.LocationstepexprContext)
            else:
                return self.getTypedRuleContext(XPathParser.LocationstepexprContext,i)


        def getRuleIndex(self):
            return XPathParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = XPathParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.document()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==XPathParser.SLASH:
                self.state = 46
                self.locationstepexpr()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(XPathParser.OP, 0)

        def StringLiteral(self):
            return self.getToken(XPathParser.StringLiteral, 0)

        def CP(self):
            return self.getToken(XPathParser.CP, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)




    def document(self):

        localctx = XPathParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_document)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(XPathParser.T__0)
            self.state = 53
            self.match(XPathParser.OP)
            self.state = 54
            self.match(XPathParser.StringLiteral)
            self.state = 55
            self.match(XPathParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationstepexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLASH(self):
            return self.getToken(XPathParser.SLASH, 0)

        def relativepath(self):
            return self.getTypedRuleContext(XPathParser.RelativepathContext,0)


        def pred(self):
            return self.getTypedRuleContext(XPathParser.PredContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_locationstepexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocationstepexpr" ):
                listener.enterLocationstepexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocationstepexpr" ):
                listener.exitLocationstepexpr(self)




    def locationstepexpr(self):

        localctx = XPathParser.LocationstepexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_locationstepexpr)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.match(XPathParser.SLASH)
                self.state = 58
                self.relativepath()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(XPathParser.SLASH)
                self.state = 60
                self.relativepath()
                self.state = 61
                self.pred()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AbsolutepathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SLASH(self):
            return self.getToken(XPathParser.SLASH, 0)

        def path(self):
            return self.getTypedRuleContext(XPathParser.PathContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_absolutepath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbsolutepath" ):
                listener.enterAbsolutepath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbsolutepath" ):
                listener.exitAbsolutepath(self)




    def absolutepath(self):

        localctx = XPathParser.AbsolutepathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_absolutepath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(XPathParser.SLASH)
            self.state = 66
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelativepathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path(self):
            return self.getTypedRuleContext(XPathParser.PathContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_relativepath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelativepath" ):
                listener.enterRelativepath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelativepath" ):
                listener.exitRelativepath(self)




    def relativepath(self):

        localctx = XPathParser.RelativepathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_relativepath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.path()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unqualifiedpath(self):
            return self.getTypedRuleContext(XPathParser.UnqualifiedpathContext,0)


        def qualifiedpath(self):
            return self.getTypedRuleContext(XPathParser.QualifiedpathContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)




    def path(self):

        localctx = XPathParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_path)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.NODE_NAME, XPathParser.STAR, XPathParser.KW_COMMENT, XPathParser.KW_NODE, XPathParser.KW_PROCESSING_INSTRUCTION, XPathParser.KW_TEXT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.unqualifiedpath()
                pass
            elif token in [XPathParser.AXES]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.qualifiedpath()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnqualifiedpathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodetest(self):
            return self.getTypedRuleContext(XPathParser.NodetestContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_unqualifiedpath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnqualifiedpath" ):
                listener.enterUnqualifiedpath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnqualifiedpath" ):
                listener.exitUnqualifiedpath(self)




    def unqualifiedpath(self):

        localctx = XPathParser.UnqualifiedpathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unqualifiedpath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.nodetest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedpathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AXES(self):
            return self.getToken(XPathParser.AXES, 0)

        def COLONCOLON(self):
            return self.getToken(XPathParser.COLONCOLON, 0)

        def nodetest(self):
            return self.getTypedRuleContext(XPathParser.NodetestContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_qualifiedpath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedpath" ):
                listener.enterQualifiedpath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedpath" ):
                listener.exitQualifiedpath(self)




    def qualifiedpath(self):

        localctx = XPathParser.QualifiedpathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_qualifiedpath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(XPathParser.AXES)
            self.state = 77
            self.match(XPathParser.COLONCOLON)
            self.state = 78
            self.nodetest()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodetestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def allnodeselector(self):
            return self.getTypedRuleContext(XPathParser.AllnodeselectorContext,0)


        def alltextselector(self):
            return self.getTypedRuleContext(XPathParser.AlltextselectorContext,0)


        def allcommentselector(self):
            return self.getTypedRuleContext(XPathParser.AllcommentselectorContext,0)


        def allprocessinginstructionselector(self):
            return self.getTypedRuleContext(XPathParser.AllprocessinginstructionselectorContext,0)


        def allselector(self):
            return self.getTypedRuleContext(XPathParser.AllselectorContext,0)


        def nodeselector(self):
            return self.getTypedRuleContext(XPathParser.NodeselectorContext,0)


        def getRuleIndex(self):
            return XPathParser.RULE_nodetest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodetest" ):
                listener.enterNodetest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodetest" ):
                listener.exitNodetest(self)




    def nodetest(self):

        localctx = XPathParser.NodetestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_nodetest)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [XPathParser.KW_NODE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.allnodeselector()
                pass
            elif token in [XPathParser.KW_TEXT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.alltextselector()
                pass
            elif token in [XPathParser.KW_COMMENT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.allcommentselector()
                pass
            elif token in [XPathParser.KW_PROCESSING_INSTRUCTION]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.allprocessinginstructionselector()
                pass
            elif token in [XPathParser.STAR]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.allselector()
                pass
            elif token in [XPathParser.NODE_NAME]:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.nodeselector()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllselectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(XPathParser.STAR, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_allselector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllselector" ):
                listener.enterAllselector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllselector" ):
                listener.exitAllselector(self)




    def allselector(self):

        localctx = XPathParser.AllselectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_allselector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(XPathParser.STAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllnodeselectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_NODE(self):
            return self.getToken(XPathParser.KW_NODE, 0)

        def OP(self):
            return self.getToken(XPathParser.OP, 0)

        def CP(self):
            return self.getToken(XPathParser.CP, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_allnodeselector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllnodeselector" ):
                listener.enterAllnodeselector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllnodeselector" ):
                listener.exitAllnodeselector(self)




    def allnodeselector(self):

        localctx = XPathParser.AllnodeselectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_allnodeselector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(XPathParser.KW_NODE)
            self.state = 91
            self.match(XPathParser.OP)
            self.state = 92
            self.match(XPathParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlltextselectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_TEXT(self):
            return self.getToken(XPathParser.KW_TEXT, 0)

        def OP(self):
            return self.getToken(XPathParser.OP, 0)

        def CP(self):
            return self.getToken(XPathParser.CP, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_alltextselector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlltextselector" ):
                listener.enterAlltextselector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlltextselector" ):
                listener.exitAlltextselector(self)




    def alltextselector(self):

        localctx = XPathParser.AlltextselectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_alltextselector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(XPathParser.KW_TEXT)
            self.state = 95
            self.match(XPathParser.OP)
            self.state = 96
            self.match(XPathParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllcommentselectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_COMMENT(self):
            return self.getToken(XPathParser.KW_COMMENT, 0)

        def OP(self):
            return self.getToken(XPathParser.OP, 0)

        def CP(self):
            return self.getToken(XPathParser.CP, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_allcommentselector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllcommentselector" ):
                listener.enterAllcommentselector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllcommentselector" ):
                listener.exitAllcommentselector(self)




    def allcommentselector(self):

        localctx = XPathParser.AllcommentselectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_allcommentselector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(XPathParser.KW_COMMENT)
            self.state = 99
            self.match(XPathParser.OP)
            self.state = 100
            self.match(XPathParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllprocessinginstructionselectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PROCESSING_INSTRUCTION(self):
            return self.getToken(XPathParser.KW_PROCESSING_INSTRUCTION, 0)

        def OP(self):
            return self.getToken(XPathParser.OP, 0)

        def CP(self):
            return self.getToken(XPathParser.CP, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_allprocessinginstructionselector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllprocessinginstructionselector" ):
                listener.enterAllprocessinginstructionselector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllprocessinginstructionselector" ):
                listener.exitAllprocessinginstructionselector(self)




    def allprocessinginstructionselector(self):

        localctx = XPathParser.AllprocessinginstructionselectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_allprocessinginstructionselector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(XPathParser.KW_PROCESSING_INSTRUCTION)
            self.state = 103
            self.match(XPathParser.OP)
            self.state = 104
            self.match(XPathParser.CP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeselectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE_NAME(self):
            return self.getToken(XPathParser.NODE_NAME, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_nodeselector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeselector" ):
                listener.enterNodeselector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeselector" ):
                listener.exitNodeselector(self)




    def nodeselector(self):

        localctx = XPathParser.NodeselectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_nodeselector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(XPathParser.NODE_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OB(self):
            return self.getToken(XPathParser.OB, 0)

        def predexpr(self):
            return self.getTypedRuleContext(XPathParser.PredexprContext,0)


        def CB(self):
            return self.getToken(XPathParser.CB, 0)

        def getRuleIndex(self):
            return XPathParser.RULE_pred

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPred" ):
                listener.enterPred(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPred" ):
                listener.exitPred(self)




    def pred(self):

        localctx = XPathParser.PredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_pred)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(XPathParser.OB)
            self.state = 109
            self.predexpr()
            self.state = 110
            self.match(XPathParser.CB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredexprContext(ParserRuleContext):
        __slots__ = 'parser'
